# VMDCube

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/montage/: AlphaMOs.tga  Psi_a_4_3-A1.cube  Psi_a_4_3-A1.tga  Psi_a_5_1-B1.tga  montage.ipynb
examples/polyacene/: polyacene.ipynb  polyacene.tga
tests/: Psi_a_5_1-B1.cube
tutorials/: vmdcube_tutorial.ipynb
tutorials/cubes/: Psi_a_4_3-A1.tga  Psi_a_5_1-B1.tga
vmdcube/: vmdcube.py  vmdcube_scripts.py
